<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Midi Music</string>
	<string name="dash">-</string>
	<string name="note">Note:</string>
	<string name="usb_disconnect">USB Device Disconnected</string>
	<string name="usb_conn">USB Device Connected</string>

	<string name="octave">Octave:</string>
	<string name="instrument">Instrument:</string>
	<string name="key">Key:</string>
	<string name="duration">Duration:</string>
	<string name="tempo">Tempo:</string>
	<string name="sustain">Sustain:</string>
	<string name="sequence">Sequence:</string>
	<string name="columns">Columns:</string>
	<string name="type">Type:</string>
	<string name="chord">Chord:</string>
	<string name="accent">Accent:</string>
	<string name="spoken">Spoken:</string>
	<string name="mod_usb">Modulate USB:</string>
	<string name="conn_usb">Connect USB Device</string>

	<string name="usb_settings">USB Settings</string>
	<string name="virtual_keyboard">Virtual Keyboard</string>
	<string name="playing_mode">Playing Mode</string>
	<string name="metronome">Metronome</string>
	<string name="transpose_key">Transpose Key:</string>
	<string name="highlighted_scale">Highlighted Scale:</string>

	<string name="console">Console</string>
	<string name="drum_machine">Drum Machine</string>
	<string name="chord_player">Chord Player</string>
	<string name="sequencer">Sequencer</string>

	<string name="loading">Loading</string>
	<string name="updating_midi">Updating Midi Files</string>

	<string name="seq_very_slow">Very Slow</string>
	<string name="seq_slow">Slow</string>
	<string name="seq_med">Medium</string>
	<string name="seq_fast">Fast</string>
	<string name="seq_very_fast">Very Fast</string>

	<string name="note_very_short">Very Short</string>
	<string name="note_short">Short</string>
	<string name="note_med">Medium</string>
	<string name="note_long">Long</string>
	<string name="note_very_long">Very Long</string>
	
	<string name="dash_dash_dash">- - -</string>
	<string name="dash_and_dash">- And -</string>
	<string name="e_and_a">e And a</string>
	
	<!-- New -->
	<string name="beats">beats</string>
	<string name="recording_track">Recording track</string>
	<string name="dubbing_track">Dubbing track</string>
	<string name="dubbing_stopped">Dubbing stopped</string>
	<string name="recording_stopped">Recording stopped</string>
	<string name="track_ready">Track ready</string>
	<string name="track_playing">Track playing</string>
	<string name="track_cleared">Track cleared</string>
	<string name="track_stopped">Track stopped</string>
	<string name="empty_track">Empty track</string>
	
	<string name="none">None</string>
	<string name="two">Two</string>
	<string name="three">Three</string>
	<string name="four">Four</string>
	
	<string name="playing_mode_single_note">Single Note</string>
	<string name="playing_mode_chord">Chord</string>
	<string name="playing_mode_sequence">Sequence</string>
	<string name="playing_mode_drums">Drums</string>

	<!-- toasts -->
	<string name="usb_not_supported">USB device not supported</string>
	<string name="usb_already_connected">USB device already connected</string>
	<string name="usb_connected">USB device connected</string>
	<string name="no_usb_detected">No USB device detected</string>
	<string name="permission_denied_for_usb">Permission denied for USB device</string>

	<string name="attach_chord">Midi Device and virtual keyboard is now attached to
		chord sounds
	</string>
	<string name="detach_chords">Midi Device and virtual keyboard is now detached
		from chord sounds
	</string>
	<string name="attach_drum">Midi Device and virtual keyboard is now attached to
		drum sounds
	</string>
	<string name="detach_drum">Midi Device and virtual keyboard is now detached
		from drum sounds
	</string>
	<string name="attach_sequence">Midi Device and virtual keyboard is now attached to
		sequence sounds
	</string>
	<string name="detach_sequence">Midi Device and virtual keyboard is now detached
		from sequence sounds
	</string>

	<string name="create_sequence_limit">Cannot create more than 30 sequences</string>
	<string name="new_sequence">New sequence</string>
	<string name="note_too_large"> note will not fit in selected space</string>
	<string name="cannot_delete_last_sequence">Cannot deleted last sequence</string>
	<string name="sequence_deleted">Sequence deleted</string>

	<string name="clear_recording">Cleared recording</string>
	<string name="cannot_loop_un_complete">Cannot loop empty or un-complete recording</string>
	<string name="cannot_record_while_looping">Cannot record while track is looping</string>
	<string name="recording_started">Recording started</string>
	<string name="dubbing_started">Dubbing started</string>

	<string name="try_smaller_tempo">Please try a smaller tempo. Spoken option
		incoherent over 110 BPM
	</string>
	<string name="out_of_range">Note is out of instrument range</string>

	<!-- content descriptors -->
	<string name="description_instrument_screen">navigate to instrument screen</string>
	<string name="description_console_screen">navigate to console screen</string>
	<string name="description_sequence_screen">navigate to sequence screen</string>
	<string name="description_drum_screen">navigate to drum screen</string>
	<string name="description_chord_screen">navigate to chord screen</string>
	<string name="description_close">close application</string>
	<string name="description_change_instr">change instrument view</string>
	<string name="description_change_drum">change drum view</string>
	<string name="description_edit_drum">edit drums on and off</string>
	<string name="description_connect_keyboard">connect keyboard</string>
	<string name="description_expand">expand or collapse menu</string>
	<string name="description_loop">loop or stop sequence</string>
	<string name="description_play">play or stop sequence</string>
	<string name="description_metronome">play or stop metronome</string>
	<string name="description_loop_track">loop or stop track</string>
	<string name="description_record_track">record or stop record track</string>
	<string name="description_delete_track">delete track</string>
	<string name="description_add_sequence">add sequence</string>
	<string name="description_rem_sequence">remove sequence</string>

</resources>
