<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_bottom_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@string/hidden">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/instrument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/dash"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <include layout="@layout/usb_connection" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <include layout="@layout/recording_pane" />

            <ImageButton
                android:id="@+id/instrument_change_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/description_change_instr"
                android:scaleType="fitCenter"
                android:src="@drawable/grid2" />

            <ImageButton
                android:id="@+id/sequence_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/description_sequence_screen"
                android:scaleType="fitCenter"
                android:src="@drawable/wave"
                android:visibility="@string/hidden" />

            <ImageButton
                android:id="@+id/drum_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/description_drum_screen"
                android:scaleType="fitCenter"
                android:src="@drawable/drum" />

            <ImageButton
                android:id="@+id/note_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/description_chord_screen"
                android:scaleType="fitCenter"
                android:src="@drawable/notes"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/console_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/description_console_screen"
                android:scaleType="fitCenter"
                android:src="@drawable/console" />

            <ImageButton
                android:id="@+id/close_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/description_close"
                android:scaleType="fitCenter"
                android:src="@drawable/close" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/instrument_fragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/rounded_corners_bg_shape"
        android:padding="3dp" />
</LinearLayout>
