<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_bottom_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@string/hidden">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drum_machine"
                android:textSize="20sp"
                android:textStyle="bold" />

            <include layout="@layout/usb_connection" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <include layout="@layout/recording_pane" />

            <ImageButton
                android:id="@+id/drum_grid_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/description_change_drum"
                android:scaleType="fitCenter"
                android:src="@drawable/grid"
                android:visibility="@string/hidden" />

            <ImageButton
                android:id="@+id/drum_edit_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/drum_header_indent"
                android:contentDescription="@string/description_edit_drum"
                android:scaleType="fitCenter"
                android:src="@drawable/wrench" />

            <ImageButton
                android:id="@+id/drum_connect_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/description_connect_keyboard"
                android:scaleType="fitCenter"
                android:src="@drawable/connect" />

            <ImageButton
                android:id="@+id/drum_key_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/description_instrument_screen"
                android:scaleType="fitCenter"
                android:src="@drawable/keys" />
        </LinearLayout>

        <Spinner
            android:id="@+id/drum_invis_spinner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:spinnerMode="dialog"
            android:visibility="invisible" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/drum_fragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/rounded_corners_bg_shape" />
</LinearLayout>
